tests/paczka1/small_fuzzy/65368646.err
Error in line 2: A52 S296 89,7
Error in line 3: A52 S528 46,6
Error in line 5: fwYMG7 S538 18,0
